--- a/login/index.html
+++ b/login/index.html
@@ -13,7 +13,7 @@
   </header>
   <div class="login">
   <h2>Log In</h2>
-  <form action="#null">
+  <form action="#null" id="Login" method="get">
   <ul>
     <li>
       <label for="username">Username</label>
@@ -26,7 +26,7 @@
     <li>
     <!---Thinking that new users may still use this form to sign up, will redirect them to a sign-in form is no registered username or email is in registry-->
       <div class="register">
-      <input type="submit" id="submit" value="Login" />
+      <button type="submit">Login</button>
       </div>
     </li>
   </ul>
@@ -36,7 +36,7 @@
 
   <div class= "signup">
   <h2>Sign Up</h2>
-  <form action="#null">
+  <form action="#null" id="signup" method="post">
   <ul>
     <li>
       <label for="username">Username</label>
@@ -44,12 +44,13 @@
     </li>
     <li>
       <label for="password">Password</label>
-      <input type="text" max=2 name="password" id="password" />
+      <input type="text" name="password" id="password" />
     </li>
     <li>
       <label for="email">E-Mail</label>
       <input type="email" name="email" id="email" />
     </li>
+    <!---Actually rethinking the need to include a category for gender in this form. I don't see how it adds or subtracts from the user experience and think it actually complicates.
     <li>
       <label for="gender">Gender Identity</label>
       <select>
@@ -63,6 +64,7 @@
         <option>Other</option>
       </select>
     </li>
+    -->
     <li>
       <label for="birthday">Birthday</label>
       <select>
@@ -80,12 +82,18 @@
         <option>November</option>
         <option>December</option>
       </select>
-      <input type="tel" maxlength=2 name="day" id="day" />
-      <input type="tel" maxlength=4 name="year" id="year" />
+      <input type="tel" maxlength=2 name="day" id="birthday" />
+      <input type="tel" maxlength=4 name="year" id="birthdayyear" />
+    </li>
+    <li>
+      <div class="adult">
+        <label for="adult">This blog contains adult content</label>
+        <input type="checkbox" name="adult" id="adult" />
+      </div>
     </li>
     <li>
       <div class="register">
-      <input type="submit" id="submit" value="Register" />
+      <button type="submit">Register</button>
       </div>
     </li>
   </ul>
