--- a/login/index.html
+++ b/login/index.html
@@ -74,6 +74,7 @@
               <input type="checkbox" name="adult" id="adult" />
             </div>
           </li>
+          <!--This uses a button instead of an input "submit" type-->
           <li>
             <button type="submit">Register</button>
           </li>
