removed div tags in html and replaced in li class

--- a/login/index.html
+++ b/login/index.html
@@ -28,11 +28,9 @@
     <h2>Log In or Register</h2>
       <form action="#null" id="Login" method="get">
         <ul>
-          <li>
-            <div class="register">
-              <label for="register">I am a new user</label>
-              <input type="checkbox" name="register" id="register" />
-            </div>
+          <li class="register">
+            <label for="register">I am a new user</label>
+            <input type="checkbox" name="register" id="register" />
           </li>
           <!--Autofocused to this section when page is loaded-->
           <li>
@@ -68,11 +66,9 @@
             <input type="tel" maxlength=2 name="day" size=2 id="birthday" />
             <input type="tel" maxlength=4 name="year" size=4 id="birthdayyear" />
           </li>
-          <li>
-            <div class="adult">
-              <label for="adult">This blog contains adult content</label>
-              <input type="checkbox" name="adult" id="adult" />
-            </div>
+          <li class="adult">
+            <label for="adult">This blog contains adult content</label>
+            <input type="checkbox" name="adult" id="adult" />
           </li>
           <!--This uses a button instead of an input "submit" type-->
           <li>
