added background image in css

--- a/login/index.html
+++ b/login/index.html
@@ -23,10 +23,10 @@
     </ul>
   </header>
 
+  <h2>Log In or Register</h2>
   <!--This is the form-->
-  <div class="login">
-    <h2>Log In or Register</h2>
-      <form action="#null" id="Login" method="get">
+
+      <form action="#null" class="login" id="Login" method="get">
         <ul>
           <li class="register">
             <label for="register">I am a new user</label>
@@ -76,7 +76,7 @@
           </li>
         </ul>
     </form>
-  </div>
+
 
 
 </body>
