added placeholders and changed button text to html, Changed coloring and some margins in CSS.

--- a/login/index.html
+++ b/login/index.html
@@ -30,20 +30,20 @@
     <ul>
       <li class="register">
         <label for="register">I am a new user</label>
-          <input type="checkbox" name="register" id="register" />
+          <input type="checkbox" name="register" id="register"  />
       </li>
   <!--Autofocused to this section when page is loaded-->
       <li>
         <label for="username">Username</label>
-        <input type="text" name="username" id="username" autofocus />
+        <input type="text" name="username" id="username" placeholder="Username" autofocus />
       </li>
       <li>
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" />
+        <input type="password" name="password" id="password" placeholder="Password" />
       </li>
       <li>
         <label for="email">E-Mail</label>
-        <input type="email" name="email" id="email" />
+        <input type="email" name="email" id="email" placeholder="E-mail" />
       </li>
       <li>
         <label for="birthday">Birthday</label>
@@ -63,8 +63,8 @@
           <option id="11">November</option>
           <option id="12">December</option>
         </select>
-        <input type="tel" maxlength=2 name="day" size=2 id="birthday" />
-        <input type="tel" maxlength=4 name="year" size=4 id="birthdayyear" />
+        <input type="tel" maxlength=2 name="day" size=2 id="birthday" placeholder="DD" />
+        <input type="tel" maxlength=4 name="year" size=4 id="birthdayyear" placeholder="YYYY" />
       </li>
       <li class="adult">
         <label for="adult">This blog contains adult content</label>
@@ -72,7 +72,7 @@
       </li>
     <!--This uses a button instead of an input "submit" type-->
       <li>
-        <button type="submit">Register</button>
+        <button type="submit">Log In or Register</button>
       </li>
     </ul>
 </form>
